--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body{
-    background-color: lightblue;
+    background-color:  beige;
 }
 
 h1{
-    color: navy;
-    margin-left: 20px;
+    color: black;
+    margin-left: 30px;
     
 }
